fix codescene comment